2008-01-13  Martin Rudalics  <rudalics@gmx.at>

	* mail/rmail.el (rmail-convert-to-babyl-format): Remove
	save-excursion to avoid infinite looping.  Reported by: dnz
	<dnz@bk.ru>.

2008-01-12  Glenn Morris  <rgm@gnu.org>

	* woman.el (woman-parse-numeric-arg): Change handling of `==':
	can be interned without a function definition.

2008-01-12  Jason Rumney  <jasonr@gnu.org>

	* nxml/nxml-mode.el (nxml-enable-unicode-char-name-sets)
	(rng-nxml-mode-init): Declare.

2008-01-11  Jason Rumney  <jasonr@gnu.org>

	* nxml/rng-nxml.el (rng-preferred-prefix-alist): Add some defaults.
	(rng-preferred-prefix-alist-default): Remove.

	* nxml/nxml-uchnm.el (nxml-internal-unicode-char-name-sets-enabled):
	Rename from nxml-enable-unicode-char-name-sets-flag.
	(nxml-enable-unicode-char-name-sets-1): Merge into
	nxml-enable-unicode-char-name-sets.
	(nxml-enable-unicode-char-name-sets): Don't unconditionally set
	nxml-char-name-ignore-case here.

	* nxml/nxml-mode.el (nxml-mode): Call rng-nxml-mode-init directly.
	Update doc string and commentary.
	(nxml-char-name-ignore-case): Change default value.
	(nxml-mode): Call nxml-enable-unicode-char-name-sets directly.

2008-01-11  Martin Rudalics  <rudalics@gmx.at>

	* cus-start.el (all): Add missing version entries.

2008-01-11  Glenn Morris  <rgm@gnu.org>

	* language/china-util.el (big5-to-flat-code, flat-code-to-big5)
	(euc-to-flat-code, flat-code-to-euc):
	* textmodes/org.el (elmo-msgdb-overview-get-entity)
	(wl-summary-buffer-msgdb): Declare as funtions.

2008-01-10  Martin Rudalics  <rudalics@gmx.at>

	* progmodes/ada-mode.el (ada-set-syntax-table-properties):
	Bind buffer-file-name and buffer-file-truename.

	* fringe.el (fringe-mode-explicit): New variable.
	(set-fringe-mode): Don't alter default-frame-alist when just
	loading this file.

2008-01-10  Tassilo Horn  <tassilo@member.fsf.org>

	* doc-view.el (doc-view-buffer-file-name): New variable.
	(doc-view-convert-current-doc, doc-view-search)